Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL), 11.4
Description
--source include/have_innodb.inc
|
 |
SELECT table_catalog,table_schema,table_name,index_schema,index_name FROM information_schema.statistics; |
SET max_session_mem_used=32768; |
--ERROR ER_OPTION_PREVENTS_STATEMENT
|
SELECT * FROM performance_schema.session_status; |
SET GLOBAL innodb_io_capacity_max=100; |
Leads to
|
11.4.0 3fad2b115569864d8c1b7ea90ce92aa895cfef08 (Debug) |
safe_mutex: Found wrong usage of mutex 'LOCK_global_system_variables' and 'LOCK_thd_kill'
|
Mutex currently locked (in reverse order):
|
LOCK_thd_kill /test/mtest/11.4_dbg/sql/sql_class.h line 4703
|
LOCK_global_system_variables /test/mtest/11.4_dbg/sql/sys_vars_shared.h line 56
|
Attachments
Issue Links
- is blocked by
-
MDEV-33031 Assertion failure upon reading from performance schema with binlog enabled
-
- Closed
-